--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
     <body>
         <h1>The start of my digital portfolio.</h1>
         <p>Beginning of the website. Epic.</p>
+        <p><a href="Cookies1.html">Hacker page</a></p>
     </body>
 </html>
