--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Sam Cairns' Website</title>
-    </head>
+<head>
+<style>
+body {
+	background-image: url('pic.jpg');
+}   
+h1 {text-align: center}
+
+</style>
+</head> 
     <body>
-        <h1>The start of my digital portfolio.</h1>
-        <p>Beginning of the website. Epic.</p>
-        <p><a href="Cookies1.html">Hacker page</a></p>
+        <h1>Sam Cairns' Digital Portfolio</h1>
+<!--        <p>Beginning of the website. Epic.</p>-->
     </body>
 </html>
