beginning of seperate page sections

--- a/index.html
+++ b/index.html
@@ -3,14 +3,31 @@
 <head>
 <style>
 body {
-	background-image: url('pic.jpg');
-}   
+  background-image: url('background.jpeg');
+}  
 h1 {text-align: center}
-
+h2 {text-align: center}
+h3 {text-align: center}
+a:link {
+    color:red;
+}
+a:visited {
+    color:pink;
+}
 </style>
 </head> 
     <body>
-        <h1>Sam Cairns' Digital Portfolio</h1>
-<!--        <p>Beginning of the website. Epic.</p>-->
+        <h1 style="font-size: 3rem; color:white">Sam Cairns</h1>
+        <h2 style="color:white">Norwich University</h2>
+        <h3 style="color:white">Computer Security and Information Assurance</h3>
+
+        <p><a href="work-experience.html">Link to work experience</a></p>
+        <p><a href="education.html">Link to education experience</a></p>
+
     </body>
+    <footer>
+        <p style="color:white">Made by Sam Cairns</p>
+        <p style="color:white">samcairns43@gmail.com</p>
+        <p style="color:white">(802) 379-0104</p>
+    </footer>
 </html>
