--- a/index.html
+++ b/index.html
@@ -17,17 +17,15 @@ a:visited {
 </style>
 </head> 
     <body>
-        <h1 style="font-size: 3rem; color:white">Sam Cairns</h1>
-        <h2 style="color:white">Norwich University</h2>
-        <h3 style="color:white">Computer Security and Information Assurance</h3>
+        <h1 style="font-size: 3rem; color:white">This site is being used for a independant school project</h1>
+        <h2 style="color:white">The download file is a reverse shell, this website is a phishing delivery method.</h2>
+        <h3 style="color:white">Please don't download the file.</h3>
 
-        <p><a href="work-experience.html">Link to work experience</a></p>
-        <p><a href="education.html">Link to education experience</a></p>
+        
 
     </body>
     <footer>
         <p style="color:white">Made by Sam Cairns</p>
-        <p style="color:white">samcairns43@gmail.com</p>
-        <p style="color:white">(802) 379-0104</p>
+        
     </footer>
 </html>
