--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@ h1 {text-align: center}
 h2 {text-align: center}
 h3 {text-align: center}
 a:link {
-    color:red;
+    color:rgb(0, 0, 255);
 }
 a:visited {
-    color:pink;
+    color:rgb(0, 234, 255);
 }
 </style>
 </head> 
