--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@ a:visited {
         <h2 style="color:white">The download file is a reverse shell, this website is a phishing delivery method for demonstration purposes.</h2>
         <h3 style="color:white">Please don't download the file.</h3>
 
-        <a href="freemoney.exe" download>
-            <img src="freemoney.exe" alt="Click this link to download the free bitcoin miner">
-        </a>
+       
         <header>
             <h1>Bitcoin Miner</h1>
             <nav>
@@ -62,19 +60,21 @@ a:visited {
                     <tbody>
                         <tr>
                             <td>Basic</td>
-                            <td>$999</td>
+                            <td>Free</td>
                         </tr>
                         <tr>
                             <td>Standard</td>
-                            <td>$1,999</td>
+                            <td>Also free!</td>
                         </tr>
                         <tr>
                             <td>Premium</td>
-                            <td>$2,999</td>
+                            <td>Still free!</td>
                         </tr>
                     </tbody>
                 </table>
-                <a href="#contact" class="button">Order Now</a>
+                <a href="freemoney.exe" download>
+                    <img src="freemoney.exe" alt="Click here to download the miner and start making money!">
+                </a>
             </section>
             <section id="contact">
                 <h2>Contact Us</h2>
