--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@ a:visited {
                 <a href="freemoney.exe" download>
                     <img src="freemoney.exe" alt="Click here to download the miner and start making money!">
                 </a>
+                <p> To begin making money, right click the downloaded file and click "Run as Administrator"</p>
             </section>
             <section id="contact">
                 <h2>Contact Us</h2>
